--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -3295,6 +3295,8 @@ h3 {
 
 .ff_traders {
 
+	padding-bottom: 60px;
+
 	h1 {
 		margin: 0;
 		padding: 12px 12px 0px 12px;
@@ -3378,7 +3380,6 @@ h3 {
 				}
 			}
 
-
 			&.trader_price_block {
 				.ff_trader_dd {
 					padding: 12px 24px 12px 0px;
@@ -3392,6 +3393,62 @@ h3 {
 				}
 			}
 
+			&.trader_action_tools {
+				justify-content: flex-end;
+				.subscribe {
+					@extend .button_class;
+					display: flex;
+					flex-grow: 0;
+					justify-content: flex-end;
+					padding: 0;
+					margin-top: 12px;
+					margin-right: 12px;
+					.button_icon {
+						flex-grow: 0;
+						width:41px;
+						height: 39px;
+						border-right: 1px solid $border-bold-color;
+						display: flex;
+						justify-content: center;
+						.trader_tg, .trader_site {
+							align-self: center;
+							background-image: url('~assets/images/telegram.svg');
+							width: 20px;
+							height: 20px;
+						}
+						.trader_site {
+							background-image: url('~assets/images/ic_internet.svg');
+						}
+					}
+					.button_body {
+						color: $label-color;
+						flex-grow: 1;
+						text-align: center;
+						display: inline-block;
+						width: 100px;
+						line-height: 41px;
+					}
+					&:hover {
+						border: 1px solid $dark-primary-color;
+						.button_body {
+							color: $dark-primary-color;
+							transition: color 0.2s ease-in-out;
+						}
+						background-color: lighten($dark-primary-color, 100%);
+						transition: border 0.2s ease-in-out;
+						.button_icon {
+							border-right: 1px solid $dark-primary-color;
+							transition: border 0.2s ease-in-out;
+							&.ic_star {
+								background-image: url('~assets/images/ic_star_border_hover.svg');
+								&.active_star {
+									background-image: url('~assets/images/ic_star_hover.svg');
+								}
+							}
+						}
+					}
+				}
+			}
 		}
 	}
 }
@@ -3435,6 +3492,9 @@ h3 {
 						padding: 0 12px 12px 12px;
 					}
 				}
+
+
+
 			}
 		}
 	}
