--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -3324,6 +3324,8 @@ h3 {
 
 .ff_traders {
 
+	padding-bottom: 60px;
+	
 	h1 {
 		margin: 0;
 		padding: 12px 12px 0px 12px;
@@ -3342,16 +3344,17 @@ h3 {
 			flex-direction: row;
 			border-top: 1px solid $border-bold-color;
 
-			.trader_name {
-				margin: 0;
-				overflow: hidden;
-			}
+
 
 			.ff_trader_dt {
 				width: 20%;
 				margin: 0;
 				padding: 12px 12px;
 				vertical-align: top;
+				.trader_ava {
+					width: 100%;
+					display: block;
+				}
 			}
 			.ff_trader_dd {
 				width: 80%;
@@ -3364,7 +3367,9 @@ h3 {
 					span {
 						margin-right: 24px;
 					}
-					
+				}
+				.ff_trader_flag {
+					font-size: 24px;
 				}
 			}
 			.trader_about {
@@ -3414,6 +3419,63 @@ h3 {
 				}
 			}
 
+			&.trader_action_tools {
+				justify-content: flex-end;
+				.subscribe {
+					@extend .button_class;
+					display: flex;
+					flex-grow: 0;
+					justify-content: flex-end;
+					padding: 0;
+					margin-top: 12px;
+					margin-right: 12px;
+					.button_icon {
+						flex-grow: 0;
+						width:41px;
+						height: 39px;
+						border-right: 1px solid $border-bold-color;
+						display: flex;
+						justify-content: center;
+						.trader_tg, .trader_site {
+							align-self: center;
+							background-image: url('~assets/images/telegram.svg');
+							width: 20px;
+							height: 20px;
+						}
+						.trader_site {
+							background-image: url('~assets/images/ic_internet.svg');
+						}
+					}
+					.button_body {
+						color: $label-color;
+						flex-grow: 1;
+						text-align: center;
+						display: inline-block;
+						width: 100px;
+						line-height: 41px;
+					}
+					&:hover {
+						border: 1px solid $dark-primary-color;
+						.button_body {
+							color: $dark-primary-color;
+							transition: color 0.2s ease-in-out;
+						}
+						background-color: lighten($dark-primary-color, 100%);
+						transition: border 0.2s ease-in-out;
+						.button_icon {
+							border-right: 1px solid $dark-primary-color;
+							transition: border 0.2s ease-in-out;
+							&.ic_star {
+								background-image: url('~assets/images/ic_star_border_hover.svg');
+								&.active_star {
+									background-image: url('~assets/images/ic_star_hover.svg');
+								}
+							}
+						}
+					}
+				}
+			}
+
 			&.trader_promo_block {
 				.ff_trader_dd {
 					padding: 12px 24px 12px 0px;
@@ -3443,6 +3505,12 @@ h3 {
 					td {
 						.vue-star-rating {
 							display: none;
+						}
+					}
+
+					.trader_ratings_row, .trader_stats_row {
+						.ff_label {
+							font-size: 10px;
 						}
 					}
 				}
