--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -3324,165 +3324,175 @@ h3 {
 
 .ff_traders {
 
+	@extend .second_font;
+
 	padding-bottom: 60px;
-	
-	h1 {
-		margin: 0;
-		padding: 12px 12px 0px 12px;
-	}
 
-	.ff_traders_description {
-		padding: 12px;
+	.ff_trader_head {
+		display: flex;
+		padding: 24px 24px 0px 24px;
+		.ff_trader_title {
+			margin: 0;
+			flex-shrink: 1;
+			padding-right: 24px;
+		}
+		.ff_traders_description {
+			flex-shrink: 2;
+		}
 	}
-
 	.ff_traders_list {
 		margin: 0;
 		padding: 0;
-
+		list-style: none;
 		.ff_trader_item {
-			display: flex;
-			flex-direction: row;
-			border-top: 1px solid $border-bold-color;
+			box-shadow: 0 2px 8px 0 rgba(0,0,0,0.30);
+			margin: 32px 24px 24px 24px;
+			.ff_trader_item_row {
+				display: flex;
+				flex-direction: row;
 
-
-
-			.ff_trader_dt {
-				width: 20%;
-				margin: 0;
-				padding: 12px 12px;
-				vertical-align: top;
-				.trader_ava {
-					width: 100%;
-					display: block;
-				}
-			}
-			.ff_trader_dd {
-				width: 80%;
-				padding-bottom: 12px;
-				&.trader_price {
-					display: flex;
-					flex-direction: column;
-					font-size: $label-size;
-					font-weight: bold;
-					span {
-						margin-right: 24px;
-					}
-				}
-				.ff_trader_flag {
-					font-size: 24px;
-				}
-			}
-			.trader_about {
-				padding-right: 24px;
-			}
-			.trader_ratings_block {
-				width: 100%;
-				border-spacing: 0;
-				border-collapse: collapse;
-				margin-top: -1px;
-				td {
-					vertical-align: top;
-					border: 1px solid $border-bold-color;
-					padding: 6px;
+				.ff_trader_dt {
 					width: 20%;
-
-				}
-
-				.trader_ratings_row {
-					td {
-						background-color: $bg-coin-color;
-						text-align: center;
-					}
-					.trader_value {
-						font-size: $primary-size;
-						font-weight: bold;
-						text-transform: uppercase;
-					}
-					.vue-star-rating {
-						margin: 0 auto;
+					margin: 0;
+					padding: 16px;
+					vertical-align: top;
+					.trader_ava {
+						width: 100%;
+						display: block;
 					}
 				}
-
-				.trader_stats_row {
-					.trader_value {
-						font-size: $label-size;
-						font-weight: bold;
-						text-transform: uppercase;
-					}
-				}
-			}
-
-
-			&.trader_price_block {
 				.ff_trader_dd {
-					padding: 12px 24px 12px 0px;
-				}
-			}
+					width: 80%;
+					padding: 16px 16px 16px 0;
 
-			&.trader_action_tools {
-				justify-content: flex-end;
-				.subscribe {
-					@extend .button_class;
-					display: flex;
-					flex-grow: 0;
-					justify-content: flex-end;
-					padding: 0;
-					margin-top: 12px;
-					margin-right: 12px;
-					.button_icon {
-						flex-grow: 0;
-						width:41px;
-						height: 39px;
-						border-right: 1px solid $border-bold-color;
-						display: flex;
-						justify-content: center;
-						.trader_tg, .trader_site {
-							align-self: center;
-							background-image: url('~assets/images/telegram.svg');
-							width: 20px;
-							height: 20px;
-						}
-						.trader_site {
-							background-image: url('~assets/images/ic_internet.svg');
-						}
+					h2 {
+						margin: 0;
 					}
-					.button_body {
-						color: $label-color;
-						flex-grow: 1;
-						text-align: center;
-						display: inline-block;
-						width: 100px;
-						line-height: 41px;
+
+					.trader_about {
+						@extend .ff_label;
+						padding-right: 24px;
 					}
-					&:hover {
-						border: 1px solid $dark-primary-color;
-						.button_body {
-							color: $dark-primary-color;
-							transition: color 0.2s ease-in-out;
+				}
+				&.trader_ratings_block {
+					margin-right: -2px;
+					margin-left: -1px;
+					table {
+						width: 100%;
+						border-spacing: 0;
+						border-collapse: collapse;
+						margin-top: -1px;
+
+						td {
+							vertical-align: top;
+							padding: 16px;
+							width: 20%;
 						}
-						background-color: lighten($dark-primary-color, 100%);
-						transition: border 0.2s ease-in-out;
-						.button_icon {
-							border-right: 1px solid $dark-primary-color;
-							transition: border 0.2s ease-in-out;
-							&.ic_star {
-								background-image: url('~assets/images/ic_star_border_hover.svg');
-								&.active_star {
-									background-image: url('~assets/images/ic_star_hover.svg');
+
+						.trader_ratings_row {
+							td {
+								text-align: center;
+								border: 1px solid $border-bold-color;
+							}
+							.trader_value {
+								font-size: $primary-size;
+								font-weight: bold;
+								text-transform: uppercase;
+							}
+							.vue-star-rating {
+								margin: 0 auto;
+							}
+						}
+
+						.trader_stats_row {
+							.trader_value {
+								font-size: $label-size;
+								font-weight: bold;
+								text-transform: uppercase;
+								.ff_trader_flag {
+									font-size: 24px;
 								}
 							}
 						}
 					}
 				}
-			}
 
-			&.trader_promo_block {
-				.ff_trader_dd {
-					padding: 12px 24px 12px 0px;
-					font-weight: bold;
+				&.trader_price_block {
+					flex-direction: column;
+					background-color: $bg-coin-color;
+					border-top: 1px solid $border-bold-color;
+					padding: 16px;
+					.price_title {
+						text-align: center;
+						font-size: 12px;
+						text-transform: uppercase;
+						font-weight: bold;
+					}
+
+					.trader_price {
+						display: flex;
+						flex-direction: row;
+						margin-top: 16px; 
+						.price_card {
+							margin-left: 16px;
+							flex-grow: 1;
+							text-align: center;
+							background-color: $bg-main-color;
+							border-radius: 5px;
+							padding: 12px;
+							&:first-child {
+								margin-left: 0;
+							}
+							.price_value {
+								font-size: 24px;
+								line-height: 32px;
+								color: $link-color;
+							}
+						}
+					}
+				}
+
+				&.trader_action_tools {
+					border-top: 1px solid $border-bold-color;
+					align-content: stretch;
+					.ff_trader_promo {
+						flex-grow: 4;
+						display: flex;
+						align-items: center;
+						padding: 24px 16px;
+						.ff_bold {
+							font-weight: bold;
+							margin-left: 12px;
+						}
+
+					}
+					.subscribe {
+						@extend .button_class;
+						height: auto;
+						display: flex;
+						padding: 0;
+						border: none;
+						border-left: 1px solid $border-bold-color;
+						align-items: center;
+						justify-content: center;
+
+						.trader_tg, .trader_site {
+							background-image: url('~assets/images/telegram_hover.svg');
+							width: 16px;
+							height: 16px;
+							margin-right: 16px;
+						}
+						.trader_site {
+							background-image: url('~assets/images/ic_internet.svg');
+						}
+
+						&:hover {
+							background-color: lighten($dark-primary-color, 100%);
+							transition: background-color 0.2s ease-in-out;
+						}
+					}
 				}
 			}
-
 		}
 	}
 }
@@ -3490,53 +3500,126 @@ h3 {
 	.ff_traders {
 		.ff_traders_list {
 			.ff_trader_item {
-				flex-wrap: wrap;
-				.ff_trader_dt {
-					width: 100%;
-				}
-				.ff_trader_dd {
-					width: 100%;
-				}
-				.trader_about {
-					padding: 12px;
-				}
+				.ff_trader_item_row {
+					flex-wrap: wrap;
+					.ff_trader_dt {
+						width: 100%;
+					}
+					.ff_trader_dd {
+						width: 100%;
+					}
+					.trader_about {
+						padding: 12px;
+					}
 
-				.trader_ratings_block {
-					td {
-						.vue-star-rating {
-							display: none;
+					&.trader_ratings_block {
+						table {
+							td {
+								.vue-star-rating {
+									display: none;
+								}
+							}
+							.trader_ratings_row, .trader_stats_row {
+								.ff_label {
+									font-size: 10px;
+								}
+							}
 						}
 					}
 
-					.trader_ratings_row, .trader_stats_row {
-						.ff_label {
-							font-size: 10px;
-						}
-					}
-				}
-
-				&.trader_price_block {
-					.ff_trader_dt {
-						padding: 12px 12px 0 12px;
-					}
-					.ff_trader_dd {
-						padding: 0 12px 12px 12px;
-					}
-				}
-
-				&.trader_promo_block {
-					.ff_trader_dt {
-						padding: 12px 12px 0 12px;
-					}
-					.ff_trader_dd {
-						padding: 0 12px 12px 12px;
-					}
 				}
 			}
 		}
 	}
 }
 
+
+
+
+
+
+
+// -- vars
+$default-size: 8em;
+$label-font-size: $default-size / 4;
+$label-font-size-redo: $default-size;
+
+// -- mixins
+@mixin size($width, $height) {
+	height: $height;
+	width: $width;
+}
+
+@mixin draw-progress($progress, $color) {
+	.pie {
+		.half-circle {
+			border-color: $color;
+		}
+
+		.left-side {
+			transform: rotate($progress * 3.6deg);
+		}
+
+		@if $progress <= 50 {
+			.right-side {
+			display: none;
+		}
+		} @else {
+			clip: rect(auto, auto, auto, auto);
+			.right-side {
+				transform: rotate(180deg);
+			}
+		}
+	}
+}
+
+.pie-wrapper {
+  @include size($default-size, $default-size);
+  margin: 8px auto 0px;
+  position: relative;
+
+  .pie {
+    @include size(100%, 100%);
+    position: absolute;
+    clip: rect(0, $default-size, $default-size, $default-size / 2);
+    left: 0;
+    top: 0;
+
+    .half-circle {
+      @include size(100%, 100%);
+      border: ($default-size / 40) solid $link-color;
+      border-radius: 50%;
+      clip: rect(0, $default-size / 2, $default-size, 0);
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  }
+
+  .label {
+    border-radius: 50%;
+    cursor: default;
+    font-size: $default-size/4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+  }
+
+  .shadow {
+    @include size(100%, 100%);
+    border: $default-size / 40 solid $border-bold-color;
+    border-radius: 50%;
+  }
+
+  &.progress-95 {
+    @include draw-progress(95, $link-color);
+  }
+}
 
 
 
