--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -3573,9 +3573,23 @@ h3 {
 .ff_trader_page {
 	@extend .ff_traders;
 	.ff_trader_head {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-start;
+		align-items: flex-start;
+		align-content: flex-start;
 		padding: 24px;
-		.trader_ava {
+		.ff_trader_img_holder {
+			flex-grow: 0;
+			width: 20%;
 			margin-right: 24px;
+			.trader_ava {
+				width: 100%;
+				height: auto;
+			}
+		}
+		.ff_trader_title{
+			flex-grow: 1;
 		}
 	}
 
